--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js",
-    "start:production": "node ." 
+    "start": "node index.js",
+    "start:dev": "nodemon src/index.js" 
   },
   "keywords": [],
   "author": "",
